--- a/index.css
+++ b/index.css
@@ -59,6 +59,12 @@ h1, h2, h3{
     margin: 0;
 }
 
+a{
+    text-decoration: none;
+    margin: 0;
+    line-height: 1.3;
+}
+
 h1{font-size: var(--fs-h1);}
 h2{font-size: var(--fs-h2);}
 h3{font-size: var(--fs-h3);}
