--- a/nav.css
+++ b/nav.css
@@ -12,4 +12,35 @@ header{}
 }
 
 .navItem{
+
+}
+
+.navItem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    width: 15vw; height: 5vh;
+    padding: 2%;
+    margin: 1%;
+    background-color: transparent;
+    border: 3px solid #15ff05;
+    border-radius: 0.6em;
+    box-shadow: 0 0 40px 40px #15ff05 inset, 0 0 0 0 #15ff05;
+    transition: all 150ms ease-in-out;
+    font-weight: 200;
+    line-height: 1;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.navItem:hover {
+    box-shadow: 0 0 10px 0 blueviolet inset, 0 0 10px 4px blueviolet;
+    outline: 0;
+}
+
+.navItemText{
+margin: 4 (25%);
+color: white;
+text-decoration: none;
 }
